--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <script>
+      window.SERVER_DATA = __SERVER_DATA__;
+  </script>
   <title>Jourly</title>
   <base href="/">
 
